--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1467,6 +1467,14 @@
             "remove_node": "Remove Node",
             "cancel_command": "Cancel Command"
           }
+        },
+        "ais_dom": {
+          "caption": " AIS Home Gateway Settings",
+          "description": "Manage your IoT and Audio gateway"
+        },
+        "ais_dom_devices": {
+          "caption": "Configuration of AIS home Devices",
+          "description": "Manage your devices with AIS dom software"
         }
       },
       "history": {
